feat: add animation of animal cards

--- a/online-zoo/assets/styles/layout/backstage.scss
+++ b/online-zoo/assets/styles/layout/backstage.scss
@@ -1,5 +1,5 @@
 .backstage {
-    background-image: url("../../assets/images/flower.svg");
+    background-image: url("../../assets/images/flower.jpg");
     background-repeat: no-repeat;
     background-position: 1400px 12px;
 
