--- a/online-zoo/assets/styles/layout/footer.scss
+++ b/online-zoo/assets/styles/layout/footer.scss
@@ -55,6 +55,10 @@
             line-height: 140%;
             color: #FFFFFF;
             vertical-align: middle;
+            transition: all 0.5s ease;
+            &:hover {
+                color: #4B9200;
+            }
         }
     } 
 }
