--- a/online-zoo/assets/styles/components/button.scss
+++ b/online-zoo/assets/styles/components/button.scss
@@ -1,12 +1,12 @@
 .button-main {
-    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);;
+    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
     text-transform: uppercase;
     color: white;
     font-size: 16px;
     font-weight: 500;
-    transition: all 0.5s ease;
+    transition: all 1s ease;
     &:hover {
         cursor: pointer;
-        background: $hover-color-btn;
+        background: linear-gradient(113.96deg, $hover-color-btn 1.49%, $hover-color-btn 101.44%);
     }
 }
