--- a/online-zoo/assets/styles/components/slider.scss
+++ b/online-zoo/assets/styles/components/slider.scss
@@ -15,10 +15,6 @@
         height: 62px;
         border-radius: 50%;
     }
-    .slider__button_prev {
-    }
-    .slider__button_next {
-    }
 }
 
 .slider__cards {
@@ -30,14 +26,18 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 366px;
+        align-items: center;
+        width: 368px;
         height: 426px;
         border: solid 1px $main-color-two;
         border-radius: 5px;
-        overflow: hidden;
+        transition: all 1s ease;
         .slider__card-image {
             width: 366px;
             height: 366px;
+            border-radius: 5px;
+            overflow: hidden;
+            transition: all 1s ease;
             img {
                 width: 100%;
                 height: 100%;
@@ -46,6 +46,8 @@
         .slider__card-description {
             display: flex;
             justify-content: space-between;
+            width: 338px;
+            transition: all 1s ease;
         }
         .slider__card-description-text {
             display: flex;
@@ -57,6 +59,7 @@
                 line-height: 20px;
                 text-transform: uppercase;
                 color: #000000;
+                transition: all 1s ease;
             }
             .slider__card-location {
                 margin-left: 16px;
@@ -65,9 +68,10 @@
                 font-size: 15px;
                 line-height: 16px;
                 color: #000000;
+                transition: all 1s ease;
             }
+            
         }
-        
         .slider__card-banana {
             width: 33px;
             height: 37px;
@@ -79,6 +83,24 @@
             height: 38px;
             margin-right: 8px;
             background: url("../../assets/icons/meet-fish_icon.svg");
+        }
+        &:hover {
+            .slider__card-description {
+                background-color: rgba(0, 0, 0, 0.7);;
+                transform: translateY(-50px);
+            }
+            .slider__card-image {
+                width: 386px;
+                height: 386px;
+                transform: translateY(-15px);
+            }
+            .slider__card-name {
+                color: #FFFFFF;
+            }
+            .slider__card-location {
+                margin-bottom: 0px;
+                color: #FFFFFF;
+            }
         }
     }
 }
