--- a/online-zoo/pages/main/style-main.css
+++ b/online-zoo/pages/main/style-main.css
@@ -21,6 +21,10 @@
   background-color: black;
 }
 
+.header__donate {
+  position: static;
+}
+
 h1 {
   padding: 0;
   margin: 0;
@@ -564,6 +568,10 @@ h3 {
   cursor: pointer;
   background: linear-gradient(113.96deg, #E47209 1.49%, #E47209 101.44%);
 }
+.button-main:active {
+  cursor: pointer;
+  background: linear-gradient(113.96deg, #4B9200 1.49%, #4B9200 101.44%);
+}
 
 .testimonials__slider {
   height: 420px;
@@ -578,14 +586,24 @@ h3 {
 }
 
 .testimonials__card {
+  position: relative;
   width: 268px;
   height: 391px;
   padding: 15px 14px 19px 16px;
   background: #F1F3F2;
-  border: solid 2px;
   border-radius: 20px;
-  border-image: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
-  border-image-slice: 1;
+  z-index: 10;
+}
+
+.testimonials__card-border {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 272px;
+  height: 395px;
+  border-radius: 20px;
+  z-index: -1;
+  background-image: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
 }
 
 .testimonials__data {
@@ -647,7 +665,7 @@ h3 {
   border-radius: 5px;
   background: #F5F7F6;
   outline: none;
-  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .scroll::-webkit-slider-thumb {
