--- a/online-zoo/assets/styles/layout/feed-friend.scss
+++ b/online-zoo/assets/styles/layout/feed-friend.scss
@@ -199,12 +199,19 @@
     font-size: 16px;
     line-height: 140%;
     color: #929699;
+   
+    &:focus {
+        outline: none;
+        border: 0.7px solid #4B9200;
+        color: #4B9200;
+    }
 }
 .feed-friend__input-amount {
     width: 310px;
     margin: 0 auto;
     text-align: center;
     margin-top: 20px;
+
     .feed-friend__input-radio {
         margin-top: 25px;
         margin-bottom: 31px;
