--- a/online-zoo/assets/styles/layout/footer.scss
+++ b/online-zoo/assets/styles/layout/footer.scss
@@ -47,6 +47,13 @@
             display: flex;
             align-items: center;
             text-decoration: none;
+            &:hover {
+                circle {
+                    transition: all 0.5s ease;
+                    fill:#4B9200
+                }
+            }
+            
         }
         span {
             margin-left: 12px;
