--- a/online-zoo/pages/main/style-main.css
+++ b/online-zoo/pages/main/style-main.css
@@ -356,6 +356,10 @@ h3 {
   align-items: center;
   text-decoration: none;
 }
+.social-networks .social-networks__link a:hover circle {
+  transition: all 0.5s ease;
+  fill: #4B9200;
+}
 .social-networks .social-networks__link span {
   margin-left: 12px;
   font-weight: 400;
