--- a/online-zoo/assets/styles/layout/animal.scss
+++ b/online-zoo/assets/styles/layout/animal.scss
@@ -1,7 +1,5 @@
-.animal {
-    background-image: url("../../assets/images/panda_bg.jpg");
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: 100% auto;
-    height: 390px;
+.animal__bg {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
