feat: adaptive for main page 1000px

--- a/online-zoo/assets/styles/components/testimonials-slider.scss
+++ b/online-zoo/assets/styles/components/testimonials-slider.scss
@@ -5,27 +5,35 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 30px; 
-    height: 391px;
     margin-bottom: 15px;
+    @media(max-width: 1000px) {
+        overflow: hidden;
+    }
 }
 .testimonials__card {
     position: relative;
-    width: 268px;
-    height: 391px;
+    width: 263px;
+    height: 387px;
     padding: 15px 14px 19px 16px;
     background: #F1F3F2;
     border-radius: 20px;
     z-index: 10;
+    @media(max-width: 1000px) {
+        width: 290px;
+    }
 }
 .testimonials__card-border {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 272px;
-    height: 395px;
+    width: 267px;
+    height: 391px;
     border-radius: 20px;
     z-index: -1;
     background-image: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+    @media(max-width: 1000px) {
+        width: 293px;
+    }
 }
 .testimonials__data {
     display: flex;
@@ -76,6 +84,9 @@
 .slider-scroll {
     width: 599px;
     margin: 0 auto;
+    @media(max-width: 1000px) {
+        width: 390px;
+    }
 }
 .scroll {
     -webkit-appearance: none;
@@ -86,6 +97,9 @@
     background: #F5F7F6;
     outline: none;
     transition: .2s;
+    @media(max-width: 1000px) {
+        width: 390px;
+    }
 }
 .scroll::-webkit-slider-thumb {
     -webkit-appearance: none;
@@ -95,6 +109,9 @@
     border-radius: 5px;
     background: #FE9013;
     cursor: pointer;
+    @media(max-width: 1000px) {
+        width: 75px;
+    }
 }
 
 .scroll::-moz-range-thumb {
