--- a/online-zoo/pages/donate/donate.scss
+++ b/online-zoo/pages/donate/donate.scss
@@ -17,10 +17,11 @@ $main-font-family-one: 'Roboto', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
 
-.container {
-    width: 1160px;
-    margin: 0 auto;
-}
+@media(max-width: 1000px) {
+    .container { 
+        width: 94%;
+    }
+} 
 
 
 @import '../../assets/styles/layout/header.scss';
