--- a/online-zoo/pages/main/style-main.css
+++ b/online-zoo/pages/main/style-main.css
@@ -9,16 +9,22 @@
 }
 
 .container {
-  width: 1160px;
+  width: 72.5%;
   margin: 0 auto;
 }
 
+@media (max-width: 1000px) {
+  .container {
+    width: 94%;
+  }
+}
 .header {
   position: absolute;
   top: 0;
   height: 80px;
   width: 100%;
   background-color: black;
+  z-index: 10;
 }
 
 .header__donate {
@@ -38,6 +44,11 @@ h1 {
   justify-items: end;
   align-items: center;
   height: 100%;
+}
+@media (max-width: 1000px) {
+  .header__container {
+    grid-template-columns: 8.72% 52.55% 38.72%;
+  }
 }
 
 .header__logo {
@@ -65,6 +76,11 @@ h1 {
 .header__nav {
   width: 88.22%;
 }
+@media (max-width: 1000px) {
+  .header__nav {
+    width: 87.24%;
+  }
+}
 
 .header__designed a {
   text-decoration: none;
@@ -86,6 +102,13 @@ h1 {
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
+@media (max-width: 1000px) {
+  .about {
+    height: 584px;
+    background-size: auto 100%;
+    background-position: -100px;
+  }
+}
 
 .about__container {
   display: flex;
@@ -99,10 +122,24 @@ h1 {
   height: 588px;
   background: url("../../assets/images/Ellipse6.svg") no-repeat;
 }
+@media (max-width: 1000px) {
+  .about__content {
+    background: url("../../assets/images/1000px/Ellipse6-1000px.svg") no-repeat;
+    top: 69px;
+    height: 469px;
+    width: 458px;
+    margin-right: 55px;
+  }
+}
 
 .about__inner {
   width: 500px;
   float: right;
+}
+@media (max-width: 1000px) {
+  .about__inner {
+    width: 400px;
+  }
 }
 
 .about__text {
@@ -118,11 +155,24 @@ h1 {
 .about__text span {
   color: #FFEE2E;
 }
+@media (max-width: 1000px) {
+  .about__text {
+    font-size: 85px;
+    margin: 53px 0 43px;
+    line-height: 75%;
+  }
+}
 
 .about__button {
-  padding: 16px 99px;
+  padding: 16px 92px;
   margin-left: 103px;
   border-radius: 25px;
+}
+@media (max-width: 1000px) {
+  .about__button {
+    margin-left: 49px;
+    padding: 18px 92px;
+  }
 }
 
 .backstage {
@@ -134,9 +184,16 @@ h1 {
 .backstage__content {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   padding-top: 140px;
   padding-bottom: 118px;
+}
+@media (max-width: 1000px) {
+  .backstage__content {
+    padding-top: 100px;
+    padding-bottom: 145px;
+  }
 }
 
 .backstage__text {
@@ -157,13 +214,28 @@ h1 {
   line-height: 135%;
   color: #333B41;
 }
+@media (max-width: 1000px) {
+  .backstage__text p {
+    line-height: 130%;
+  }
+}
 .backstage__text .question-title {
   margin: 54px 0 34px;
   font-size: 24px;
 }
+@media (max-width: 1000px) {
+  .backstage__text {
+    width: 454px;
+  }
+}
 
 .pets {
   background: url("../../assets/images/palm_foto.svg") no-repeat -480px 707px, url("../../assets/images/strelitzia.svg") no-repeat 1230px 890px;
+}
+@media (max-width: 1000px) {
+  .pets {
+    background: url("../../assets/images/1000px/palm_foto-1000px.svg") no-repeat -190px 875px, url("../../assets/images/1000px/strelitzia-1000px.svg") no-repeat 760px 900px;
+  }
 }
 
 .pets__container {
@@ -176,20 +248,36 @@ h1 {
   border-radius: 25px;
   margin: 80px auto 100px auto;
 }
+@media (max-width: 1000px) {
+  .pets__button {
+    padding: 18px 60px;
+    margin: 80px auto 140px auto;
+  }
+}
 
 .pick-friend {
   padding-top: 69px;
   padding-bottom: 100px;
   background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
 }
+@media (max-width: 1000px) {
+  .pick-friend {
+    padding-top: 30px;
+    padding-bottom: 50px;
+  }
+}
 
 .pick-friend__container {
   text-align: center;
-  height: 835px;
   background-color: rgba(253, 253, 255, 0.52);
   border-radius: 20px;
   padding-top: 41px;
   margin: 0 auto;
+}
+@media (max-width: 1000px) {
+  .pick-friend__container {
+    padding-top: 30px;
+  }
 }
 .pick-friend__container .pick-friend__title {
   font-weight: 400;
@@ -204,6 +292,11 @@ h1 {
   line-height: 130%;
   color: #333B41;
 }
+@media (max-width: 1000px) {
+  .pick-friend__container .pick-friend__title-2 {
+    margin: 40px 0;
+  }
+}
 
 .pick-friend__text {
   text-align: start;
@@ -216,6 +309,11 @@ h1 {
   color: #333B41;
   margin: 30px 0px 40px 0;
 }
+@media (max-width: 1000px) {
+  .pick-friend__text .text-1 {
+    margin: 20px 0;
+  }
+}
 .pick-friend__text .text-2 {
   font-weight: 500;
   font-size: 16px;
@@ -223,16 +321,32 @@ h1 {
   color: #333B41;
   margin-bottom: 10px;
 }
+@media (max-width: 1000px) {
+  .pick-friend__text .text-2 {
+    margin-right: 80px;
+  }
+}
 .pick-friend__text .text-3 {
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
   color: #333B41;
+  margin-right: 100px;
+}
+@media (max-width: 1000px) {
+  .pick-friend__text .text-3 {
+    margin-right: 80px;
+  }
 }
 .pick-friend__text .text-3 a {
   color: #333B41;
   text-decoration: none;
   border-bottom: solid 1px #FE9013;
+}
+@media (max-width: 1000px) {
+  .pick-friend__text {
+    margin-left: 49px;
+  }
 }
 
 .pick-friend__stages {
@@ -275,16 +389,30 @@ h1 {
 .pick-friend__button {
   padding: 16px 75px;
   border-radius: 25px;
-  margin: 60px auto 0;
+  margin: 60px auto 60px;
+}
+@media (max-width: 1000px) {
+  .pick-friend__button {
+    margin: 70px auto 50px;
+  }
 }
 
 .testimonials {
   background: url("../../assets/images/leav.svg") no-repeat 1355px 645px;
 }
+@media (max-width: 1000px) {
+  .testimonials {
+    background: url("../../assets/images/1000px/leav_foto-1000px.svg") no-repeat 800px 600px;
+  }
+}
 
 .testimonials__container {
-  padding-top: 140px;
-  padding-bottom: 180px;
+  padding: 140px 0 180px;
+}
+@media (max-width: 1000px) {
+  .testimonials__container {
+    padding: 100px 0 140px;
+  }
 }
 
 h3 {
@@ -296,11 +424,21 @@ h3 {
   text-align: center;
   color: #333B41;
 }
+@media (max-width: 1000px) {
+  h3 {
+    margin-bottom: 30px;
+  }
+}
 
 .testimonials__button {
-  padding: 16px 83px;
+  padding: 17px 83px;
   border-radius: 5px;
   margin-top: 31px;
+}
+@media (max-width: 1000px) {
+  .testimonials__button {
+    margin-top: 52px;
+  }
 }
 
 .footer {
@@ -323,6 +461,11 @@ h3 {
   font-size: 24px;
   line-height: 120%;
   color: #FFFFFF;
+}
+@media (max-width: 1000px) {
+  .footer__subscription {
+    margin-right: 32px;
+  }
 }
 
 .footer__button {
@@ -376,12 +519,20 @@ h3 {
 .footer__nav {
   width: 366px;
 }
+@media (max-width: 1000px) {
+  .footer__nav {
+    width: 332px;
+  }
+}
 
 .footer__designed {
   font-weight: 100;
   font-size: 16px;
   line-height: 130%;
   color: #FFFFFF;
+}
+.footer__designed .footer__designed-text-1 {
+  margin-bottom: 10px;
 }
 
 .footer__input-email {
@@ -426,6 +577,11 @@ h3 {
 
 .footer__menu {
   margin-left: 60px;
+}
+@media (max-width: 1000px) {
+  .footer__menu {
+    margin-left: 50px;
+  }
 }
 
 .menu {
@@ -474,12 +630,44 @@ h3 {
   height: 62px;
   border-radius: 50%;
 }
+@media (max-width: 1000px) {
+  .slider__nav__buttons {
+    display: none;
+  }
+}
+
+.slider__nav__buttons_1000 {
+  display: flex;
+  justify-content: space-between;
+  width: 295px;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  justify-self: center;
+}
+.slider__nav__buttons_1000 .slider__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 62px;
+  height: 62px;
+  border-radius: 50%;
+}
+@media (min-width: 1001px) {
+  .slider__nav__buttons_1000 {
+    display: none;
+  }
+}
 
 .slider__cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px 30px;
   width: 100%;
+}
+@media (max-width: 1000px) {
+  .slider__cards {
+    grid-gap: 15px 30px;
+  }
 }
 .slider__cards .slider__card {
   display: flex;
@@ -492,12 +680,24 @@ h3 {
   border-radius: 5px;
   transition: all 1s ease;
 }
+@media (max-width: 1000px) {
+  .slider__cards .slider__card {
+    width: 294px;
+    height: 354px;
+  }
+}
 .slider__cards .slider__card .slider__card-image {
   width: 366px;
   height: 366px;
   border-radius: 5px;
   overflow: hidden;
   transition: all 1s ease;
+}
+@media (max-width: 1000px) {
+  .slider__cards .slider__card .slider__card-image {
+    width: 294px;
+    height: 294px;
+  }
 }
 .slider__cards .slider__card .slider__card-image img {
   width: 100%;
@@ -508,6 +708,11 @@ h3 {
   justify-content: space-between;
   width: 338px;
   transition: all 1s ease;
+}
+@media (max-width: 1000px) {
+  .slider__cards .slider__card .slider__card-description {
+    width: 264px;
+  }
 }
 .slider__cards .slider__card .slider__card-description-text {
   display: flex;
@@ -585,29 +790,43 @@ h3 {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-column-gap: 30px;
-  height: 391px;
   margin-bottom: 15px;
+}
+@media (max-width: 1000px) {
+  .testimonials__cards {
+    overflow: hidden;
+  }
 }
 
 .testimonials__card {
   position: relative;
-  width: 268px;
-  height: 391px;
+  width: 263px;
+  height: 387px;
   padding: 15px 14px 19px 16px;
   background: #F1F3F2;
   border-radius: 20px;
   z-index: 10;
+}
+@media (max-width: 1000px) {
+  .testimonials__card {
+    width: 290px;
+  }
 }
 
 .testimonials__card-border {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 272px;
-  height: 395px;
+  width: 267px;
+  height: 391px;
   border-radius: 20px;
   z-index: -1;
   background-image: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+}
+@media (max-width: 1000px) {
+  .testimonials__card-border {
+    width: 293px;
+  }
 }
 
 .testimonials__data {
@@ -660,6 +879,11 @@ h3 {
   width: 599px;
   margin: 0 auto;
 }
+@media (max-width: 1000px) {
+  .slider-scroll {
+    width: 390px;
+  }
+}
 
 .scroll {
   -webkit-appearance: none;
@@ -671,6 +895,11 @@ h3 {
   outline: none;
   transition: 0.2s;
 }
+@media (max-width: 1000px) {
+  .scroll {
+    width: 390px;
+  }
+}
 
 .scroll::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -680,6 +909,11 @@ h3 {
   border-radius: 5px;
   background: #FE9013;
   cursor: pointer;
+}
+@media (max-width: 1000px) {
+  .scroll::-webkit-slider-thumb {
+    width: 75px;
+  }
 }
 
 .scroll::-moz-range-thumb {
