--- a/online-zoo/assets/styles/components/slider.scss
+++ b/online-zoo/assets/styles/components/slider.scss
@@ -14,6 +14,28 @@
         height: 62px;
         border-radius: 50%;
     }
+    @media(max-width: 1000px) {
+        display: none;
+    }
+}
+.slider__nav__buttons_1000 {
+    display: flex;
+    justify-content: space-between;
+    width: 295px;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    justify-self: center;
+    .slider__button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 62px;
+        height: 62px;
+        border-radius: 50%;
+    }
+    @media(min-width: 1001px) {
+        display: none;
+    }
 }
 
 .slider__cards {
@@ -21,6 +43,9 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px 30px;
     width: 100%;
+    @media(max-width: 1000px) {
+        grid-gap: 15px 30px;
+    }
     .slider__card {
         display: flex;
         flex-direction: column;
@@ -31,12 +56,20 @@
         border: solid 1px $main-color-two;
         border-radius: 5px;
         transition: all 1s ease;
+        @media(max-width: 1000px) {
+            width: 294px;
+            height: 354px;
+        }
         .slider__card-image {
             width: 366px;
             height: 366px;
             border-radius: 5px;
             overflow: hidden;
             transition: all 1s ease;
+            @media(max-width: 1000px) {
+                width: 294px;
+                height: 294px;
+            }
             img {
                 width: 100%;
                 height: 100%;
@@ -47,6 +80,9 @@
             justify-content: space-between;
             width: 338px;
             transition: all 1s ease;
+            @media(max-width: 1000px) {
+                width: 264px;
+            }
         }
         .slider__card-description-text {
             display: flex;
