--- a/online-zoo/assets/styles/layout/pets.scss
+++ b/online-zoo/assets/styles/layout/pets.scss
@@ -1,5 +1,8 @@
 .pets {
     background: url("../../assets/images/palm_foto.svg") no-repeat -480px 707px, url("../../assets/images/strelitzia.svg") no-repeat 1230px 890px;
+    @media(max-width: 1000px) {
+        background: url("../../assets/images/1000px/palm_foto-1000px.svg") no-repeat -190px 875px, url("../../assets/images/1000px/strelitzia-1000px.svg") no-repeat 760px 900px;
+    }
 }
 .pets__container {
     display: flex;
@@ -9,4 +12,8 @@
     padding: 16px 60px;
     border-radius: 25px;
     margin: 80px auto 100px auto;
+    @media(max-width: 1000px) {
+        padding: 18px 60px;
+        margin: 80px auto 140px auto;
+    }
 }
